# so_explorer

./: .gitignore  LICENSE  README.md  default.nix  pyproject.toml  requirements.txt  so_explorer.py  web_interface.py
so_explorer/: cli.py  web_interface.py
so_explorer/templates/: template.html
templates/: template.html
